--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.6",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
     "expo": "~49.0.11",
@@ -18,10 +19,15 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-format-currency": "^0.0.3",
     "react-native-heroicons": "^3.2.0",
+    "react-native-maps": "^1.7.1",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-svg": "^13.14.0"
+    "react-native-svg": "^13.14.0",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
