--- a/package.json
+++ b/package.json
@@ -9,24 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
+    "@expo/webpack-config": "^19.0.0",
+    "@firebase/firestore": "^4.4.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.6",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
+    "axios": "^1.6.2",
     "expo": "~49.0.11",
+    "expo-location": "^16.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
+    "install": "^0.13.0",
     "nativewind": "^2.0.11",
+    "npm": "^10.2.5",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-dotenv": "^3.4.9",
     "react-native-format-currency": "^0.0.3",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-maps": "^1.7.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-progress": "^5.0.0",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "^13.14.0",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2"
   },
   "devDependencies": {
